--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog_mern_stack",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000/",
+  "proxy": "https://simple-blog-back-end.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
